<resources>
    <string name="app_name">ViewAbility Tester</string>
    <string name="set_sizes">Set size for webView</string>
    <string name="set_height">Set height:</string>
    <string name="set_width">Set width:</string>
    <string name="load_ad">Load Inter.</string>
    <string name="show_ad">Show Inter.</string>
    <string name="app_key_text">Set appKey:</string>
    <string name="right_shift">Right shift</string>
    <string name="left_shift">Left Shift</string>
    <string name="top_shift">Top Shift</string>
    <string name="bottom_shift">Bottom Shift</string>
    <string name="left_right_shift">Left-Right Shift</string>
    <string name="top_bottom_shift">Top-Bottom Shift</string>
    <string name="mini">Mini</string>
    <string name="fullscreen">Fullscreen Ad</string>
    <string name="loading_text">Loading...</string>
    <string name="set_value">Set value</string>
    <string name="set_shifting_value">Shift on:  </string>
    <string name="screen_size_is">Screen size(px):</string>
    <string name="large">Large Ad</string>
    <string name="small">Small Ad</string>
    <string name="load_banner">Load Banner</string>
    <string name="visible_on">Visible on:</string>
    <string name="hide_banner">Hide banner</string>
    <string name="app_key_is_empty">App key is empty</string>
    <string name="banner_load_fail">Banner Load Fail:</string>
    <string name="interstitial_did_rich_end">onLoopMeInterstitialVideoDidReachEnd</string>
    <string name="interstitial_expired">onLoopMeInterstitialExpired</string>
    <string name="interstitial_leave_app">onLoopMeInterstitialLeaveApp</string>
    <string name="interstitial_clicked">onLoopMeInterstitialClicked</string>
    <string name="interstitial_hide">onLoopMeInterstitialHide</string>
    <string name="interstitial_load_success">onLoopMeInterstitialLoadSuccess</string>
    <string name="interstitial_load_fail">Interstitial Load Fail:</string>
    <string name="interstitial_is_ready">Interstitial is ready</string>
    <string name="overlapping">Overlapping</string>
    <string name="overlap">Overlap</string>
    <string name="banner_size_title">Banner size (px):</string>
</resources>
